--- a/test.properties
+++ b/test.properties
@@ -1304,6 +1304,7 @@
         test.name.skip.portal.instance,\
         test.prepare.bundle.properties,\
         test.run.environment,\
+        test.save.web.page,\
         test.smtp.server.enabled,\
         testcase.url,\
         testray.component.names,\
