--- a/modules/apps/fragment/fragment-web/package.json
+++ b/modules/apps/fragment/fragment-web/package.json
@@ -10,13 +10,19 @@
 		"metal-uri": "^2.3.0"
 	},
 	"devDependencies": {
+		"babel-cli": "6.26.0",
+		"babel-preset-env": "^1.6.1",
 		"check-source-formatting": "^2.0.4",
-		"liferay-module-config-generator": "^1.1.10",
-		"metal-cli": "^4.3.3"
+		"cross-env": "^5.1.3",
+		"liferay-npm-bundler": "^2.1.0",
+		"metal-tools-soy": "^4.0.0",
+		"rimraf": "^2.6.2"
 	},
 	"name": "fragment-web",
 	"scripts": {
+		"build": "metalsoy --soyDeps \"node_modules/+(com.liferay.frontend.js.web)/**/*.soy\" && cross-env NODE_ENV=production babel -d classes/META-INF/resources src/main/resources/META-INF/resources && liferay-npm-bundler && npm run cleanSoy",
 		"checkFormat": "npm run csf",
+		"cleanSoy": "rimraf src/**/*.soy.js",
 		"csf": "csf src/**/*.js src/**/*.scss src/**/*.soy",
 		"format": "npm run csf -- -i"
 	},
