--- a/modules/apps/site-navigation/site-navigation-admin-web/build.gradle
+++ b/modules/apps/site-navigation/site-navigation-admin-web/build.gradle
@@ -1,10 +1,6 @@
 sourceCompatibility = "1.8"
 targetCompatibility = "1.8"
 
-configJSModules {
-	include "**/*.js*"
-}
-
 dependencies {
 	compileOnly group: "biz.aQute.bnd", name: "biz.aQute.bndlib", version: "3.1.0"
 	compileOnly group: "com.liferay.portal", name: "com.liferay.portal.impl", version: "default"
@@ -23,4 +19,6 @@ dependencies {
 	compileOnly project(":apps:staging:staging-api")
 	compileOnly project(":core:petra:petra-lang")
 	compileOnly project(":core:petra:petra-string")
+
+	jsCompile project(":apps:frontend-js:frontend-js-metal-web")
 }
