--- a/modules/apps/site-navigation/site-navigation-admin-web/package.json
+++ b/modules/apps/site-navigation/site-navigation-admin-web/package.json
@@ -7,13 +7,19 @@
 		"metal-throttle": "^3.0.0"
 	},
 	"devDependencies": {
-		"check-source-formatting": "^2.0.10",
-		"liferay-module-config-generator": "^1.2.1",
-		"metal-cli": "^4.0.1"
+		"babel-cli": "6.26.0",
+		"babel-preset-env": "^1.6.1",
+		"check-source-formatting": "^2.0.4",
+		"cross-env": "^5.1.3",
+		"liferay-npm-bundler": "^2.1.0",
+		"metal-tools-soy": "^4.0.0",
+		"rimraf": "^2.6.2"
 	},
 	"name": "site-navigation-menu-web",
 	"scripts": {
+		"build": "metalsoy --soyDeps \"node_modules/+(com.liferay.frontend.js.metal.web)/**/*.soy\" && cross-env NODE_ENV=production babel -d classes/META-INF/resources src/main/resources/META-INF/resources && liferay-npm-bundler && npm run cleanSoy",
 		"checkFormat": "npm run csf",
+		"cleanSoy": "rimraf src/**/*.soy.js",
 		"csf": "csf src/**/*.es.js src/**/*.scss src/**/*.jsp",
 		"format": "npm run csf -- -i"
 	},
